--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<html>
+
 <script>
 const playerX = {
   simbol: "X",
@@ -115,3 +117,5 @@ button{
 <div>
   <button>reset</button>
 </div>
+  
+  </html>
